# qis101

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  configure_vscode.ps1  cspell.json  install_vscode_extensions.ps1  install_vscode_extensions.sh  pyproject.toml  qis101.code-workspace  qis101_utils.py  remove_pycache_folders.ps1  test_cuda.py  test_gpu.py
Session 01 - Introducing Quantum Computing/: task01_01.py
Session 02 - Installing Courseware/: my_quip.py  welcome.ipynb  welcome.py
Session 03 - Introducing Python/: age_in_seconds.py  age_in_weeks.py  basel_series.ipynb  coprime_probability.py  euclid_gcd.py  euler_totient.py  fahrenheit_to_celsius.py  gauss_summation.py  leibniz_formula.py  leibniz_series.py  logarithmic_series.py  numpy_arrays.ipynb  perfect_numbers.py  python_dictionaries.ipynb  python_lists.ipynb  python_sets.ipynb  python_tuples.ipynb
Session 04 - Computational Mathematics/: big_sqrt.py  chakravala_method.py  factor_quadratic.py  frobenius_parallel.py  frobenius_serial.py  gen_cf.py  goldbach_conjecture.ipynb  herons_formula.py  herons_method.py  newton_sqrt.py  pells_equation.py  random_straws.py  selmers_algorithm.py  std_cf.ipynb
Session 05 - Algorithmic Efficiency/: bubble_sort.py  closest_point.py  connect_four.py  dealer_bogus.py  dealer_fast.py  dealer_slow.py  list_cards.py  newton_raphson.py  perfect_numbers_fast.py  prime_racer1.py  prime_racer2.py  prime_racer3.py  prime_racer4.py  quicksort.py  timsort.py
Session 06 - Data Visualization/: collatz_conjecture.py  euler_line.py  line_graphs.py  matplotlib_backends.py  plot_circle.py  plot_circle_polar.py  plot_ellipse.py  plot_ellipse_polar.py  plot_infinite_series.py  plot_multigraphs.py  plot_parabola.py  plot_polynomial.py  plot_quintic.py  plot_rings.py  plot_rose_curves.py  plot_superposition.py  plot_temperature_scales.py  random_walk.py  random_walk_lattice.py
Session 07 - Information Theory/: AliceInWonderland.txt  aes_demo.py  base_conversion.ipynb  bigram_decrypt.py  bigram_frequency.py  caesar_decrypt.py  freq_histogram.py  huffman_decoding.ipynb  huffman_encoding.ipynb  reverse_string.ipynb  rsa_demo.py  swar_popcount.ipynb
Session 08 - Early Quantum Mechanics/: spectrum_bohr.py  spectrum_rydberg.py
Session 09 - Probability  and Statistics/: bessel_correction.py  birthday_paradox.py  common_statistics.py  hero_abilities.py  lattice_circle.py  shuffle_scorer.py  uniform_variance.py
Session 09 - Probability and Statistics/: bessel_correction.py  binomial_distribution.py  common_statistics.py  hero_abilities.py  lattice_circle.py  pachinko_normal - Copy.ipynb  pachinko_normal.ipynb  second_moment.py  shuffle_scorer.py  uniform_variance.py
Session 10 - Numerical Analysis/: adaptive_quadrature.py  bernoulli_series.py  chain_rule1.ipynb  chain_rule2.ipynb  chain_rule3.ipynb  circle_area.py  complex_roots.ipynb  dirichlet_function.py  fermat_derivative.py  irregular_integration.py  jax_ad.ipynb  ladder_problem.py  limit_conjugate.py  limit_d_exp.py  limit_exp.py  limit_gaussian_sum.py  limit_sinc.py  numpy_boolean_indexing.ipynb  oscillating_integrand.py  photon_spectrum.py  richardson_extrapolation.py  roots_sympy.py  scintillator_pulse.py  simpsons_rule.py  sinc_integral.py  stdnormal_area.py  third_derivative.py
Session 11 - Scientific Computing and Data Science/: balance_eqn1.ipynb  balance_eqn2.ipynb  balance_eqn3.ipynb  balance_eqn4.ipynb  balance_eqn5.ipynb  balance_eqn6.ipynb  electrical_conductivity_macos_safari.py  electrical_conductivity_mswin_chrome.py  idw.py  idw_min_rmsd.py  iris_analysis.ipynb  periodic_table.json  plot_liquid_range.ipynb  plot_liquid_range.py  python_dictionaries.ipynb  read_json.ipynb  seq_lrss.ipynb  seq_orf.ipynb  write_json.ipynb
Session 12 - Complex Algebra/: complex_factorization.py  complex_identities.ipynb  complex_numbers.ipynb  euler_formula.py  euler_gamma.ipynb  euler_identity.py  gamma_eta.py  make_prime_powers.py  make_zeta_zeros.py  prime_harmonics.py  riemann_hypothesis.py  riemann_pi.py  zeros_spacing_gue.py  zeros_spacing_uniform.py  zeta_harmonics.py  zeta_zeros.txt
Session 13 - Classical Wave Equations/: binomial_sqrt.py  newton_binomial.py  nyquist_known.ipynb  nyquist_unknown.ipynb  string_waves.py  taylor_series.py  traveling_waves.py  wave_packet.ipynb
Session 14 - Fourier Analysis/: fft.py  fourier_discrete.py  fourier_filter.py  make_samples.py  plot_unknown_wave.py  uncertainty_principle.py  z_transform.ipynb
Session 15 - Linear Algebra/: convex_hull.py  eigenvalues.ipynb  gram_schmidt.ipynb  matrix_algebra.ipynb  matrix_identities.ipynb  maze_adjacency.py  maze_draw.py  maze_search.py  real_vectors.ipynb  uv_spectroscopy.ipynb
Session 16 - Vector Algebra/: plot3d_cylinder.py  plot3d_gradient.py  plot3d_helix.py  plot3d_monolith.py  plot3d_pyramid.py  plot3d_sphere.py  plot3d_surface.py  plot3d_torus.py
Session 17 - Mathematical Modeling and Machine Learning/: cluster_samples.csv  cosmic_rays.ipynb  ellipse_perimeter.py  field_strength.json  identify_element.ipynb  k_means.py  k_means_sklearn.py  k_means_spectral.py  laplacian_matrix.ipynb  neural_network.py  newtonian_kinematics.py  nn_popcount_learn.py  nn_popcount_test.py  nn_primes_learn.py  nn_primes_test.py  nn_xor.py  nn_xor_matrix_no_bias.py  nn_xor_matrix_with_bias.py  plot_ellipse_uniform.py  plot_field_strength.py  plot_pca_3d.py  qis101_utils.py  quadratic_regression.py  quadratic_regression_sklearn.py  road1.csv
Session 18 - Differential Equations/: boundary_values.py  carbon14_decay.ipynb  cromer_pendulum.ipynb  damped_pendulum.py  epidemiology.py  estes_rocket.py  euler_pendulum.ipynb  fluorine18_decay.ipynb  harmonograph.py  nonlinear_ode.py  parallel_plates.py  predator_prey.ipynb  projectile_motion.ipynb  rc_circuit.py  scipy_pendulum.py
Session 19 - Dynamical Systems/: fpu_recurrence.py  fpu_spring_mass.py  general_relativity.py  henon_heiles_yoshida.py  ifs.py  ifs_bnl.py  ifs_fern.py  ifs_hexagonal.py  ifs_square.py  ifs_triangle.py  logistics_map.py  mandelbrot_set.py  mandlebrot_set.py  mercury_precession.py  (+8 more)
(+342 files in other folders)
