[project]
name = "qis101"
version = "0.1.0"
description = "Foundations of Quantum Information Science (QIS101)"
readme = "README.md"

requires-python = ">=3.13,<3.14"

dependencies = [
    "apptools",
    "beautifulsoup4",
    "black",
    "configobj",
    "datasets",
    "ipympl",
    "ipython",
    "jax[cpu]",
    "joblib",
    "jupyter",
    "matplotlib",
    "networkx",
    "numba",
    "numexpr",
    "numpy",
    "pandas",    
    "pip",
    "pulp",
    "pyface",
    "pygame",
    "pyqt6",
    "pyside6",
    "pyside6-addons",
    "qiskit-aer",
    "qiskit-experiments",
    "qiskit-ibm-runtime",
    "qiskit-machine-learning",
    "qiskit-optimization",
    "qiskit[all,visualization]",
    "ruff",
    "scikit-learn",
    "scipy",
    "seaborn",
    "selenium",
    "setuptools",
    "sympy",
    "tqdm",
    "traitsui",
    "transformers",
    "webdriver-manager",
    "wheel",
    # CuPy: only available on Linux and Windows x64 with CUDA; not on macOS
    "cupy-cuda12x ; sys_platform == 'linux' or (sys_platform == 'win32' and platform_machine == 'AMD64')",
    "highspy>=1.13.1",
    "pyvista[all]>=0.47.1",
]

[build-system]
# Hatchling is uv's default build backend. It reads this pyproject.toml to
# determine what source files to install when a user runs 'uv sync'.
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Tell Hatchling to install qis101_utils.py from the project root into
# site-packages, making it importable from any notebook or script regardless
# of which session folder it lives in.
include = ["qis101_utils.py"]

[tool.uv]
# Install the qis101 project itself in editable mode during 'uv sync',
# so changes to qis101_utils.py at the root are reflected immediately
# without needing to reinstall.
package = true
# Resolve for all three target platforms
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[tool.ruff]
extend-include = ["*.ipynb"]
lint.extend-select = ["I", "C4", "ISC", "SIM", "TCH"]
lint.ignore = []
show-fixes = true
target-version = "py313"
